saint-lascivious.github.io: lots of stuff
Changes to be committed:
 - modified:   404.html
   add a 'proper' 404 page
 - modified:   index.html
   use stylesheet
   minor text changes
 - new file:   resources/images/luxio.png
   required for 404 page
 - new file:   resources/manifests/sainternet.json
   not new, renamed, but whatever
   change start url
   (hopefully actually works now)
 - deleted:    resources/manifests/sainternet.webmanifest
   see above
 - new file:   resources/stylesheets/sainternet.css
   use stylesheet
   remove needless duplications
   add dumb device orientation specific dynamic scaling

--- a/404.html
+++ b/404.html
@@ -3,28 +3,50 @@
 <!DOCTYPE html>
 <html lang="en-NZ">
 <head>
+  <!--  basic icon magic  -->
+  <link rel="apple-touch-icon" href="/resources/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml" href="/resources/icons/icon.svg">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="any">
+  <!--  basic pwa magic  -->
+  <link rel="manifest" href="/resources/manifests/sainternet.json">
+  <!--  basic stylesheet magic  -->
+  <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
   <!--  basic regular magic  -->
   <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
   <meta name="charset" content="UTF-8">
+  <meta name="description" content="#404 Luxio Spark Pokémon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Who's that Pokémon?</title>
-  <!--  basic style magic  -->
-  <style>
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    footer {
-      font-family: arial;
-      font-size: 4vmin;
-      text-align: center;
-    }
-  </style>
+  <title>#404 Luxio</title>
 </head>
 <body>
-  <article>
-    <img src="/resources/images/wurmple.png" alt="It's Wurmple!" style="width:98%;">
+<header>
+  <h1>
+    sainternet.xyz
+  </h1>
+  <subheader>
+    <p>
+      <b><i>…breaking the internet, since 2016</i></b>
+    </p>
+  </subheader>
+  <hr>
+</header>
+<main>
+ <article>
+    <h2>
+      #404 Luxio<br>
+      Spark Pokémon
+    </h2>
+    <bodytext>
+      <p>
+        A wild <b>Luxio</b> appeared!
+      </p>
+    </bodytext>
+    <img src="/resources/images/luxio.png" alt="#404 Luxio: Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes." style="width:80%;">
+    <bodytext>
+      <p>
+        Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
+      </p>
+    </bodytext>
   </article>
 </main>
 <footer>
