saint-lascivious.github.io: "HTML+CSS is fun and easy!"
- Literally no one, circa history of all time.

Changes to be committed:
 - modified:   404.html
 - modified:   index.html
 - modified:   resources/stylesheets/sainternet.css

--- a/404.html
+++ b/404.html
@@ -23,11 +23,6 @@
   <h1>
     sainternet.xyz
   </h1>
-  <subheader>
-    <p>
-      <b><i>…breaking the internet, since 2016</i></b>
-    </p>
-  </subheader>
   <hr>
 </header>
 <main>
@@ -36,23 +31,20 @@
       #404 Luxio<br>
       Spark Pokémon
     </h2>
-    <bodytext>
-      <p>
-        A wild <b>Luxio</b> appeared!
-      </p>
-    </bodytext>
+    <p>
+      A wild <b>Luxio</b> appeared!
+    </p>
     <img src="/resources/images/luxio.png" alt="#404 Luxio: Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes." style="width:80%;">
-    <bodytext>
-      <p>
-        Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
-      </p>
-    </bodytext>
+    <p>
+      Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
+    </p>
   </article>
 </main>
 <footer>
   <address>
     <hr>
-    Contact: <a href="mailto:saint@sainternet.xyz">saint@sainternet.xyz</a>
+    Contact: <a href="mailto:saint@sainternet.xyz">saint@sainternet.xyz</a><br>
+    GitHub: <a href="https://github.com/saint-lascivious">saint-lascivious</a>
   </address>
 </footer>
 </body>
