saint-lascivious.github.io: fix links from testing
Changes to be committed:
 - modified:   index.html
   fix links from testing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--  basic pwa magic  -->
   <link rel="manifest" href="/resources/manifests/sainternet.json">
   <!--  basic stylesheet magic  -->
-  <link rel="stylesheet" href="/home/saint/Source/saint-lascivious.github.io/resources/stylesheets/sainternet.css">
+  <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
   <!--  basic regular magic  -->
   <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
   <meta name="charset" content="UTF-8">
@@ -86,12 +86,12 @@
       Pokédex-over-DNS
     </h2>
     <!-- get wurmed -->
-    <img src="/home/saint/Source/saint-lascivious.github.io/resources/images/wurmple.png" alt="#265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
+    <img src="/resources/images/wurmple.png" alt="#265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
     <p>
       Sainternet is proud to present the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex-over-DNS!
     </p>
     <!-- get termed -->
-    <img src="/home/saint/Source/saint-lascivious.github.io/resources/images/terminal.png" alt="Example Pokédex-over-DNS query using the nslookup utility from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:90%;">
+    <img src="/resources/images/terminal.png" alt="Example Pokédex-over-DNS query using the nslookup utility from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:90%;">
     <p>
       A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species name (currently supported: English) in order to receive its National Pokédex Number (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese Rōmaji).
     </p>
