saint-lascivious.github.io: baby's first div
Changes to be committed:
 - modified:   404.html
 - modified:   index.html
 - modified:   resources/stylesheets/sainternet.css

--- a/404.html
+++ b/404.html
@@ -20,17 +20,20 @@
 </head>
 <body>
 <header>
-  <h1>
-    sainternet.xyz
-  </h1>
+  <div class="titletext">
+    <b>sainternet.xyz</b>
+  </div>
+  <div class="subtext">
+    <i>…breaking the internet, since 2016</i>
+  </div>
   <hr>
 </header>
 <main>
  <article>
-    <h2>
+    <div class="subtitletext">
       #404 Luxio<br>
       Spark Pokémon
-    </h2>
+    </div>
     <p>
       A wild <b>Luxio</b> appeared!
     </p>
