--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
 </head>
 <body>
 <header>
-  <h1>
-    sainternet.xyz
-  </h1>
+  <div class="titletext">
+    <b>sainternet.xyz</b>
+  </div>
+  <div class="subtext">
+    <i>…breaking the internet, since 2016</i>
+  </div>
   <hr>
 </header>
 <main>
   <article>
-    <h2>
+    <div class="subtitletext">
       Filtered DNS
-    </h2>
+    </div>
       <p>
         Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over all your favourite acronyms.
       </p>
@@ -82,9 +85,9 @@
     </p>
   </article>
   <article>
-    <h2>
+    <div class="subtitletext">
       Pokédex-over-DNS
-    </h2>
+    </div>
     <!-- get wurmed -->
     <img src="/resources/images/wurmple.png" alt="#265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
     <p>
