saint-lascivious.github.io: minor formatting, new terminal image
Changes to be committed:
 - modified:   404.html
   bold subtext in header
 - modified:   index.html
   bold subtext in header
 - modified:   resources/images/terminal.png
   new terminal image
   (nslookup + dig commands)
 - modified:   resources/manifests/sainternet.json
   add scope
 - modified:   resources/stylesheets/sainternet.css
   clean up a bit
   left justify <p>
   less shit div class names

--- a/404.html
+++ b/404.html
@@ -20,17 +20,17 @@
 </head>
 <body>
 <header>
-  <div class="titletext">
+  <div class="title">
     <b>sainternet.xyz</b>
   </div>
   <div class="subtext">
-    <i>…breaking the internet, since 2016</i>
+    <b><i>…breaking the internet, since 2016</i></b>
   </div>
   <hr>
 </header>
 <main>
  <article>
-    <div class="subtitletext">
+    <div class="subtitle">
       #404 Luxio<br>
       Spark Pokémon
     </div>
