--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 </head>
 <body>
 <header>
-  <div class="titletext">
+  <div class="title">
     <b>sainternet.xyz</b>
   </div>
   <div class="subtext">
-    <i>…breaking the internet, since 2016</i>
+    <b><i>…breaking the internet, since 2016</i></b>
   </div>
   <hr>
 </header>
 <main>
   <article>
-    <div class="subtitletext">
+    <div class="subtitle">
       Filtered DNS
     </div>
       <p>
@@ -85,7 +85,7 @@
     </p>
   </article>
   <article>
-    <div class="subtitletext">
+    <div class="subtitle">
       Pokédex-over-DNS
     </div>
     <!-- get wurmed -->
@@ -94,7 +94,7 @@
       Sainternet is proud to present the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex-over-DNS!
     </p>
     <!-- get termed -->
-    <img src="/resources/images/terminal.png" alt="Example Pokédex-over-DNS query using the nslookup utility from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:90%;">
+    <img src="/resources/images/terminal.png" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz" style="width:90%;">
     <p>
       A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species name (currently supported: English) in order to receive its National Pokédex Number (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese Rōmaji).
     </p>
