--- a/index.html
+++ b/index.html
@@ -1,111 +1,155 @@
-<!--        sainternet.xyz index.html        -->
-<!-- saint-lascivious (Hayden Pearce), ©2022 -->
-<!DOCTYPE html>
+<!doctype html>
+<!--
+  sainternet.xyz - index.html
+  Copyright 2022 saint-lascivious (Hayden Pearce). All rights reserved.
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      https://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License
+-->
 <html lang="en-NZ">
-<head>
-  <!--  basic icon magic  -->
-  <link rel="apple-touch-icon" href="/resources/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/svg+xml" href="/resources/icons/icon.svg">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="any">
-  <!--  basic pwa magic  -->
-  <link rel="manifest" href="/resources/manifests/sainternet.json">
-  <!--  basic stylesheet magic  -->
-  <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
-  <!--  basic regular magic  -->
-  <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
-  <meta name="charset" content="UTF-8">
-  <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
-  <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>sainternet.xyz</title>
-</head>
-<body>
-<header>
-  <div class="title">
-    <b>sainternet.xyz</b>
-  </div>
-  <div class="subtext">
-    <b><i>…breaking the internet, since 2016</i></b>
-  </div>
-  <hr>
-</header>
-<main>
-  <article>
-    <div class="subtitle">
-      Filtered DNS
+  <head>
+    <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>sainternet.xyz</title>
+
+    <!-- Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="resources/icons/icon-192.png">
+    <link rel="icon" sizes="512x512" href="resources/icons/icon-512.png">
+
+    <!-- Safari iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
+    <link rel="apple-touch-icon" href="resources/icons/apple-touch-icon.png">
+
+    <!-- Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="resources/icons/ms-touch-icon.png">
+    <meta name="msapplication-TileColor" content="#3372DF">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="any">
+    <link rel="shortcut icon" href="resources/icons/favicon.png">
+
+    <!-- SEO -->
+    <link rel="canonical" href="https://sainternet.xyz/">
+    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
+    <style>
+    #contact {
+      position: fixed;
+      display: block;
+      right: 0;
+      bottom: 0;
+      margin-right: 40px;
+      margin-bottom: 40px;
+      z-index: 900;
+    }
+    </style>
+  </head>
+  <body>
+    <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
+      <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">sainternet.xyz</span>
+          <div class="mdl-layout-spacer"></div>
+        </div>
+      </header>
+      <div class="demo-ribbon"></div>
+      <main class="demo-main mdl-layout__content">
+        <div class="demo-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3>Filtered DNS</h3>
+              <p>
+                Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over all your favourite acronyms.
+              </p>
+              <table>
+                <tr>
+                  <th>Protocol</th>
+                  <th>Address</th>
+                  <th>Port</th>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
+                  <td>dns.sainternet.xyz</td>
+                  <td>TCP 443</td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
+                  <td>dns.sainternet.xyz</td>
+                  <td>UDP 443</td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
+                  <td>119.224.127.171</td>
+                  <td>TCP 53</td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
+                  <td>dns.sainternet.xyz</td>
+                  <td>TCP 853</td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
+                  <td>119.224.127.171</td>
+                  <td>UDP 53</td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
+                  <td>dns.sainternet.xyz</td>
+                  <td>UDP 784<br>UDP 853<br>UDP 8853</td>
+                </tr>
+              </table>
+              <p>
+                Sainternet blocks many domains known to be associated with unsavoury behaviours (including but not limited to advertising, botnets, malware, spam and telemetry), using a variety of methods updated regularly.
+              </p>
+              <p>
+                Sainternet <i>does not</i> and <b><i>will not</i></b> block domains based upon ethical, moral, personal, political or religious belief, nor upon any lack thereof.
+              </p>
+              <p>
+                Note: Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
+              </p>
+            <h3>Pokedex over DNS</h3>
+              <img src="resources/images/wurmple.png" alt="#265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
+              <p>
+                Sainternet is home to <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex-over-DNS!
+              </p>
+              <!-- get termed -->
+              <img src="resources/images/terminal.png" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz" style="width:90%;">
+              <p>
+                A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species name (currently supported: English) in order to receive its <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese <a href="https://en.wikipedia.org/wiki/Romanization_of_Japanese">Rōmaji<a/>).
+              </p>
+           </div>
+        </div>
+        <footer class="demo-footer mdl-mini-footer">
+          <div class="mdl-mini-footer--left-section">
+            <ul class="mdl-mini-footer--link-list">
+              <li><a href="https://github.com/saint-lascivious">GitHub</a></li>
+              <li><a href="https://www.reddit.com/user/saint-lascivious">Reddit</a></li>
+            </ul>
+          </div>
+        </footer>
+      </main>
     </div>
-      <p>
-        Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over all your favourite acronyms.
-      </p>
-    <table>
-      <tr>
-        <th>Protocol</th>
-        <th>Address</th>
-        <th>Port</th>
-      </tr>
-      <tr>
-        <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
-        <td>dns.sainternet.xyz</td>
-        <td>TCP 443</td>
-      </tr>
-      <tr>
-        <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
-        <td>dns.sainternet.xyz</td>
-        <td>UDP 443</td>
-      </tr>
-      <tr>
-        <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-        <td>119.224.127.171</td>
-        <td>TCP 53</td>
-      </tr>
-      <tr>
-        <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
-        <td>dns.sainternet.xyz</td>
-        <td>TCP 853</td>
-      </tr>
-      <tr>
-        <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-        <td>119.224.127.171</td>
-        <td>UDP 53</td>
-      </tr>
-      <tr>
-        <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
-        <td>dns.sainternet.xyz</td>
-        <td>UDP 784<br>UDP 853<br>UDP 8853</td>
-      </tr>
-    </table>
-    <p>
-      Sainternet blocks many domains known to be associated with unsavoury behaviours (including but not limited to advertising, botnets, malware, spam and telemetry), using a variety of methods updated regularly.
-      </p>
-    <p>
-      Sainternet <i>does not</i> and <b><i>will not</i></b> block domains based upon ethical, moral, personal, political or religious belief, nor upon any lack thereof.
-    </p>
-    <p>
-      Note: Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
-    </p>
-  </article>
-  <article>
-    <div class="subtitle">
-      Pokédex-over-DNS
-    </div>
-    <!-- get wurmed -->
-    <img src="/resources/images/wurmple.png" alt="#265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
-    <p>
-      Sainternet is proud to present the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex-over-DNS!
-    </p>
-    <!-- get termed -->
-    <img src="/resources/images/terminal.png" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz" style="width:90%;">
-    <p>
-      A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species name (currently supported: English) in order to receive its National Pokédex Number (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese Rōmaji).
-    </p>
-  </article>
-</main>
-<footer>
-  <address>
-    <hr>
-    Contact: <a href="mailto:saint@sainternet.xyz">saint@sainternet.xyz</a><br>
-    GitHub: <a href="https://github.com/saint-lascivious">saint-lascivious</a>
-  </address>
-</footer>
-</body>
+    <a href="mailto:saint@sainternet.xyz" target="_blank" "rel=noopener noreferrer" id="contact" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Contact</a>
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  </body>
 </html>
