saint-lascivious.github.io: add 404 page back in mdl lite form
and some minor text fixes

contact button switches to back button

Changes to be committed:
 - new file:   404.html
 - modified:   index.html
 - new file:   resources/images/luxio.png

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="any">
-    <link rel="shortcut icon" href="resources/icons/favicon.png">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/">
@@ -58,8 +57,8 @@
       display: block;
       right: 0;
       bottom: 0;
-      margin-right: 40px;
-      margin-bottom: 40px;
+      margin-right: 20px;
+      margin-bottom: 25px;
       z-index: 900;
     }
     </style>
@@ -127,10 +126,10 @@
               <p>
                 Note: Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
               </p>
-            <h3>Pokedex over DNS</h3>
+            <h3>Pokédex over DNS</h3>
               <img src="resources/images/wurmple.png" alt="#265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
               <p>
-                Sainternet is home to <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex-over-DNS!
+                Sainternet is home to the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex-over-DNS!
               </p>
               <!-- get termed -->
               <img src="resources/images/terminal.png" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz" style="width:90%;">
