--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="resources/icons/favicon.png">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/">
