--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="resources/icons/favicon.ico">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/">
@@ -148,7 +148,7 @@
         </footer>
       </main>
     </div>
-    <a href="mailto:saint@sainternet.xyz" target="_blank" "rel=noopener noreferrer" id="contact" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Contact</a>
+    <a href="mailto:saint@sainternet.xyz?subject=Information%20Request&body=Query%20Text%20Here" target="_blank" "rel=noopener noreferrer" id="contact" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Contact</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
