saint-lascivious.github.io: fix breadcrumbs, favicon
Changes to be committed:
 - modified:   404.html
 - modified:   index.html

--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Pokémon #404 Luxio</title>
+    <title>Pokémon #404</title>
 
     <!-- Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -40,7 +40,7 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="resources/icons/favicon.png">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/">
@@ -86,11 +86,11 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
-              <a href="https://sainternet.xyz">Home</a> &gt; <a href="#pokedexoverdns">Pokémon 404</a>
+              <a href="https://sainternet.xyz#home">Home</a> &gt; <a href="#pokemon404">Pokémon #404</a> &gt; <a href="#luxio">Luxio</a>
             </div>
             <h3 id="pokemon404">Pokémon #404<br>Luxio<br>Spark Pokémon</h3>
               <img src="resources/images/luxio.png" alt="#404 Luxio: Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes." style="width:80%;">
-              <p>
+              <p id="luxio">
                 A wild <b>Luxio</b> appeared!
               </p>
               <p>
