--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="resources/icons/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/">
@@ -67,7 +67,7 @@
     <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
       <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"><b>sainternet.xyz</b></span>
+          <span class="mdl-layout-title" id="home"><b>sainternet.xyz</b></span>
           <div class="mdl-layout-spacer"></div>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
             <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
@@ -86,7 +86,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
-              <a href="#filtereddns">Filtered DNS</a> &gt; <a href="#pokedexoverdns">Pokédex over DNS</a>
+              <a href="#home">Home</a> &gt; <a href="#filtereddns">Filtered DNS</a> &gt; <a href="#pokedexoverdns">Pokédex over DNS</a>
             </div>
             <h3 id="filtereddns">Filtered DNS</h3>
               <p>
@@ -149,7 +149,7 @@
                 A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species name (currently supported: English) in order to receive its <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese <a href="https://en.wikipedia.org/wiki/Romanization_of_Japanese">Rōmaji</a>).
               </p>
               <p>
-                <a href="https://www.nlnetlabs.nl/projects/unbound/about/">Unbound</a> local-data .pokedex record configuration available <a href="https://github.com/saint-lascivious/unbound-config/blob/master/configs/pokedex.conf">here</a>.
+                <a href="https://www.nlnetlabs.nl/projects/unbound/about/">Unbound</a> local-data record configuration for the .pokedex virtual domain available <a href="https://github.com/saint-lascivious/unbound-config/blob/master/configs/pokedex.conf">here</a>.
               </p>
            </div>
         </div>
