--- a/index.html
+++ b/index.html
@@ -67,17 +67,8 @@
     <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
       <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title" id="home"><b>sainternet.xyz</b></span>
+          <span class="mdl-layout-title"><b>sainternet.xyz</b></span>
           <div class="mdl-layout-spacer"></div>
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-            <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
-              <i class="material-icons">search</i>
-            </label>
-            <div class="mdl-textfield__expandable-holder">
-              <input class="mdl-textfield__input" type="text" id="search">
-              <label class="mdl-textfield__label" for="search">Enter text…</label>
-            </div>
-          </div>
         </div>
       </header>
       <div class="demo-ribbon"></div>
@@ -86,7 +77,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
-              <a href="#home">Home</a> &gt; <a href="#filtereddns">Filtered DNS</a> &gt; <a href="#pokedexoverdns">Pokédex over DNS</a>
+              <a href="#filtereddns">Filtered DNS</a> &gt; <a href="#pokedexoverdns">Pokédex over DNS</a>
             </div>
             <h3 id="filtereddns">Filtered DNS</h3>
               <p>
