saint-lascivious.github.io: picture elements, dark/light wurm
Changes to be committed:
 - modified:   404.html
 - modified:   index.html
 - new file:   resources/images/wurmple-shiny.png
 - modified:   resources/images/wurmple.png

--- a/404.html
+++ b/404.html
@@ -76,7 +76,9 @@
               <a href="https://sainternet.xyz">Home</a> &gt; <a href="#pokemon404">Pokémon #404</a> &gt; <a href="#luxio">Luxio</a>
             </div>
             <h3 id="pokemon404">Pokémon #404<br>Luxio<br>Spark Pokémon</h3>
-              <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes." style="width:80%;">
+              <picture>
+                <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes." style="width:80%;">
+              </picture>
               <p id="luxio">
                 A wild <b>Luxio</b> appeared!
               </p>
