saint-lascivious.github.io: pretty much inevitable
Changes to be committed:
 - new file:   265.html
 - modified:   index.html

--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
             <h3 id="pokedexoverdns">National Pokédex over DNS</h3>
               <!-- get wurmed -->
               <picture>
-                <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
-                <img src="resources/images/wurmple.png" alt="#265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
+                <a href="265.html">
+                  <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
+                  <img src="resources/images/wurmple.png" alt="Pokémon #265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
+                </a>
               </picture>
               <p>
                 Sainternet is proud to present to you the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex over DNS!
