--- a/265.html
+++ b/265.html
@@ -40,7 +40,8 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="resources/icons/favicon.svg" type="image/svg+xml">
 
     <!-- Styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
@@ -53,8 +54,8 @@
       display: block;
       right: 0;
       bottom: 0;
-      margin-right: 20px;
-      margin-bottom: 25px;
+      margin-right: 30px;
+      margin-bottom: 30px;
       z-index: 900;
     }
     </style>
@@ -78,8 +79,7 @@
             <h3 id="pokemon265">Pokémon #265<br>Wurmple</h3>
               <picture>
                 <a href="404.html">
-                  <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
-                  <img src="resources/images/wurmple.png" alt="Pokémon #265 Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
+                  <img src="resources/images/wurmple-shiny.png" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
                 </a>
               </picture>
               <p id="wurmple">
