--- a/404.html
+++ b/404.html
@@ -40,7 +40,8 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="resources/icons/favicon.svg" type="image/svg+xml">
 
     <!-- Styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
@@ -53,8 +54,8 @@
       display: block;
       right: 0;
       bottom: 0;
-      margin-right: 20px;
-      margin-bottom: 25px;
+      margin-right: 30px;
+      margin-bottom: 30px;
       z-index: 900;
     }
     </style>
