saint-lascivious.github.io: topical cards with depth effect
Changes to be committed:
 - modified:   index.html

--- a/index.html
+++ b/index.html
@@ -74,12 +74,19 @@
       </header>
       <div class="demo-ribbon"></div>
       <main class="demo-main mdl-layout__content">
+        <!-- card one -->
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
               <a href="#filtereddns">Filtered DNS</a> &gt; <a href="#pokedexoverdns">National Pokédex over DNS</a>
             </div>
+          </div>
+        </div>
+        <!-- card two -->
+        <div class="demo-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="demo-content mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="filtereddns">Filtered DNS</h3>
               <p>
                 Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over all your favourite acronyms.
@@ -130,6 +137,12 @@
               <p>
                 Note: Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
               </p>
+          </div>
+        </div>
+        <!-- card three -->
+        <div class="demo-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokedexoverdns">National Pokédex over DNS</h3>
               <!-- get wurmed -->
               <picture>
@@ -150,7 +163,7 @@
               <p>
                 <a href="https://www.nlnetlabs.nl/projects/unbound/about/">Unbound</a> local-data record configuration for the .pokedex virtual domain available <a href="https://github.com/saint-lascivious/unbound-config/blob/master/configs/pokedex.conf">here</a>.
               </p>
-           </div>
+          </div>
         </div>
         <footer class="demo-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
